--- a/examples/nextjs-app/public/serviceworker/redirect.html
+++ b/examples/nextjs-app/public/serviceworker/redirect.html
@@ -112,7 +112,9 @@
         <div class="beat beat-even"></div>
         <div class="beat beat-odd"></div>
       </div>
-      <h1 class="title content" id="closeText" style="display: none;">You can close this window now</h1>
+      <h1 class="title content" id="closeText" style="display: none">
+        You can close this window now
+      </h1>
     </div>
     <script
       src="https://scripts.toruswallet.io/broadcastChannel_3_5_3.js"
@@ -176,7 +178,9 @@
         webWorkerSupport: false, // (optional) set this to false if you know that your channel will never be used in a WebWorker (increase performance)
       };
       var instanceParams = {};
-      var preopenInstanceId = new URL(window.location.href).searchParams.get("preopenInstanceId");
+      var preopenInstanceId = new URL(window.location.href).searchParams.get(
+        "preopenInstanceId"
+      );
       if (!preopenInstanceId) {
         document.getElementById("message").style.visibility = "visible";
         // in general oauth redirect
@@ -198,10 +202,23 @@
           var error = "";
           try {
             if (Object.keys(hashParams).length > 0 && hashParams.state) {
-              instanceParams = JSON.parse(window.atob(decodeURIComponent(decodeURIComponent(hashParams.state)))) || {};
+              instanceParams =
+                JSON.parse(
+                  window.atob(
+                    decodeURIComponent(decodeURIComponent(hashParams.state))
+                  )
+                ) || {};
               if (hashParams.error) error = hashParams.error;
-            } else if (Object.keys(queryParams).length > 0 && queryParams.state) {
-              instanceParams = JSON.parse(window.atob(decodeURIComponent(decodeURIComponent(queryParams.state)))) || {};
+            } else if (
+              Object.keys(queryParams).length > 0 &&
+              queryParams.state
+            ) {
+              instanceParams =
+                JSON.parse(
+                  window.atob(
+                    decodeURIComponent(decodeURIComponent(queryParams.state))
+                  )
+                ) || {};
               if (queryParams.error) error = queryParams.error;
             }
           } catch (e) {
@@ -223,7 +240,10 @@
             );
           } else {
             // communicate via broadcast channel
-            bc = new broadcastChannelLib.BroadcastChannel("redirect_channel_" + instanceParams.instanceId, broadcastChannelOptions);
+            bc = new broadcastChannelLib.BroadcastChannel(
+              "redirect_channel_" + instanceParams.instanceId,
+              broadcastChannelOptions
+            );
             bc.addEventListener("message", function (ev) {
               if (ev.success) {
                 bc.close();
@@ -246,7 +266,8 @@
               error: error,
             }).then(function () {
               setTimeout(function () {
-                window.location.href = url.origin + location.search + location.hash;
+                window.location.href =
+                  url.origin + location.search + location.hash;
               }, 5000);
             });
           }
@@ -259,12 +280,18 @@
       } else {
         // in preopen, awaiting redirect
         try {
-          bc = new broadcastChannelLib.BroadcastChannel("preopen_channel_" + preopenInstanceId, broadcastChannelOptions);
+          bc = new broadcastChannelLib.BroadcastChannel(
+            "preopen_channel_" + preopenInstanceId,
+            broadcastChannelOptions
+          );
           bc.onmessage = function (ev) {
             var { preopenInstanceId: oldId, payload, message } = ev.data;
             if (oldId === preopenInstanceId && payload && payload.url) {
               window.location.href = payload.url;
-            } else if (oldId === preopenInstanceId && message === "setup_complete") {
+            } else if (
+              oldId === preopenInstanceId &&
+              message === "setup_complete"
+            ) {
               bc.postMessage({
                 data: {
                   preopenInstanceId: preopenInstanceId,
